add style to perfil view

--- a/templates/blog.amp.html
+++ b/templates/blog.amp.html
@@ -250,8 +250,20 @@ input.btn-envier-form {
 }
 
 
+
+
 li.ampstart-nav-item {
     margin: 50px 0px 40px 0px!important;
+}
+
+.nombre-user{
+  text-align: center;
+}
+
+.imagen-user {
+    width: 179px;
+    height: 124px;
+    margin: 10px auto;
 }
     /*fin estilo modal*/
 
@@ -811,6 +823,9 @@ li.ampstart-nav-item {
     .mb4 {
       margin-bottom: 2rem
     }
+    .m5{
+      margin-bottom:3.5rem;
+    }
 
     .ml4,
     .mx4 {
@@ -864,11 +879,8 @@ li.ampstart-nav-item {
 
     .ml-auto,
     .mx-auto {
-      margin-left: auto
-    }
-
-    .mx-auto {
-      margin-right: auto
+      margin-left: auto;      
+      margin-right: auto;
     }
 
     .my-auto {
@@ -2531,16 +2543,16 @@ li.ampstart-nav-item {
   <main id="content" role="main" class="">
     <article class="recipe-article">
       <header>
-        <span class="ampstart-subtitle block px3 pt2 mb2">FOOD</span>
-        <h1 class="mb1 px3">Ginger Strawberry Spritzer</h1>
+        <amp-img src="../img/misa-img.svg" width="50px" height="80px" layout="responsive" alt="The final spritzer"
+        class="mt5 imagen-user"></amp-img>
+        <h3 class="mb1 px3 nombre-user">Misael Gutierrez Lopez</h3>
 
         <!-- Start byline -->
         <address class="ampstart-byline clearfix mb4 px3 h5">
-          <time class="ampstart-byline-pubdate block bold my1" datetime="2016-12-13">December 13, 2016</time>
+          <time class="ampstart-byline-pubdate block bold my1" datetime="2016-12-13">Desarrollador web FullStack</time>
         </address>
         <!-- End byline -->
-        <amp-img src="../img/blog/spritzer.jpg" width="1280" height="853" layout="responsive" alt="The final spritzer"
-          class="mb4 mx3"></amp-img>
+     
 
       </header>
       <p class="mb4 px3">Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a
